provisioning/cf-kakomon/cf.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: >-
  AWS CloudFormation for ISUCON11 Qualify
Parameters:
  KeyPairName:
    Description: "Amazon EC2 Key Pair"
    Type: AWS::EC2::KeyPair::KeyName
  BenchInstanceImageId:
    Description: "Bench Instance AMI Id"
    Type: AWS::EC2::Image::Id
    Default: ami-082201231e54507b9
  QualifyInstanceImageId:
    Description: "Qualify Instance AMI Id"
    Type: AWS::EC2::Image::Id
    Default: ami-0088b181798171356
Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: "192.168.0.0/16"
      EnableDnsSupport: "true"
      EnableDnsHostnames: "true"
      InstanceTenancy: default
  InternetGateway:
    Type: AWS::EC2::InternetGateway
  InternetGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref InternetGateway
      VpcId: !Ref VPC
  Subnet:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: "ap-northeast-1c"
      CidrBlock: "192.168.0.0/24"
      VpcId: !Ref VPC
      MapPublicIpOnLaunch: False
  RouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
  Route:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref RouteTable
      DestinationCidrBlock: "0.0.0.0/0"
      GatewayId: !Ref InternetGateway
  SubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref Subnet
      RouteTableId: !Ref RouteTable
  SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref VPC
      GroupDescription: Security Group for ISUCON11 Qualify
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: "22"
          ToPort: "22"
          CidrIp: "0.0.0.0/0"
        - IpProtocol: tcp
          FromPort: "443"
          ToPort: "443"
          CidrIp: "0.0.0.0/0"
        - IpProtocol: -1
          CidrIp: "192.168.0.0/24"
  EC2IAMRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - ec2.amazonaws.com
            Action:
              - sts:AssumeRole
      Path: /
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/AmazonSSMManagedInstanceCore
        - arn:aws:iam::aws:policy/AWSXRayDaemonWriteAccess
  EC2InstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Path: /
      Roles:
        - Ref: EC2IAMRole

  BenchInstance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !Ref BenchInstanceImageId
      InstanceType: c4.xlarge
      SecurityGroupIds:
        - !Ref SecurityGroup
      SubnetId: !Ref Subnet
      PrivateIpAddress: "192.168.0.10"
      KeyName: !Ref KeyPairName
      IamInstanceProfile: !Ref EC2InstanceProfile
      BlockDeviceMappings:
        - DeviceName: /dev/sda1
          Ebs:
            VolumeSize: 20
            VolumeType: gp3
      Tags:
        - Key: Name
          Value: isucon11-bench
  BenchInstanceIP:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      InstanceId: !Ref BenchInstance

  QualifyInstance1:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !Ref QualifyInstanceImageId
      InstanceType: c5.large
      SecurityGroupIds:
        - !Ref SecurityGroup
      SubnetId: !Ref Subnet
      PrivateIpAddress: "192.168.0.11"
      KeyName: !Ref KeyPairName
      IamInstanceProfile: !Ref EC2InstanceProfile
      BlockDeviceMappings:
        - DeviceName: /dev/sda1
          Ebs:
            VolumeSize: 20
            VolumeType: gp3
      Tags:
        - Key: Name
          Value: isucon11-qualify-1
  QualifyInstanceIP1:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      InstanceId: !Ref QualifyInstance1
  QualifyInstance2:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !Ref QualifyInstanceImageId
      InstanceType: c5.large
      SecurityGroupIds:
        - !Ref SecurityGroup
      SubnetId: !Ref Subnet
      PrivateIpAddress: "192.168.0.12"
      KeyName: !Ref KeyPairName
      IamInstanceProfile: !Ref EC2InstanceProfile
      BlockDeviceMappings:
        - DeviceName: /dev/sda1
          Ebs:
            VolumeSize: 20
            VolumeType: gp3
      Tags:
        - Key: Name
          Value: isucon11-qualify-2
  QualifyInstanceIP2:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      InstanceId: !Ref QualifyInstance2
  QualifyInstance3:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !Ref QualifyInstanceImageId
      InstanceType: c5.large
      SecurityGroupIds:
        - !Ref SecurityGroup
      SubnetId: !Ref Subnet
      PrivateIpAddress: "192.168.0.13"
      KeyName: !Ref KeyPairName
      IamInstanceProfile: !Ref EC2InstanceProfile
      BlockDeviceMappings:
        - DeviceName: /dev/sda1
          Ebs:
            VolumeSize: 20
            VolumeType: gp3
      Tags:
        - Key: Name
          Value: isucon11-qualify-3
  QualifyInstanceIP3:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      InstanceId: !Ref QualifyInstance3
